--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,12 @@ spring.datasource.driver=org.h2.Driver
 spring.datasource.username=${DATABASE_USERNAME}
 spring.datasource.password=${DATABASE_PASSWORD}
 
+# configurações do JPA / Hibernate
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.h2.console.enabled=true
+
+# configurar o flyway
+spring.flyway.enable=true
+spring.flyway.locations=classpath:db/migrations
+spring.flyway.baseline-on-migrate=true
